--- a/package.json
+++ b/package.json
@@ -7,16 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-palette-builder": "^1.0.24"
   },
   "devDependencies": {
     "@vue/cli-service": "^4.0.0",
+    "tailwindcss": "^1.1.3",
     "vue-template-compiler": "^2.6.10"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
   },
   "browserslist": [
     "> 1%",
