--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "vue": "^2.6.10",
-    "vue-palette-builder": "^1.0.24"
+    "vue-palette-builder": "file:../vue-palette-builder"
   },
   "devDependencies": {
     "@vue/cli-service": "^4.0.0",
